Added two more functions that will be used in the startRound function where the game logic happens

--- a/diceRoyale.html
+++ b/diceRoyale.html
@@ -5,7 +5,7 @@
 		</head>
 		<body>
 			<div id="demoDiv"></div>
-			<button onClick="AddTen()">Click me!</button>
+			<button onClick="startRound()">Start Next Round!</button>
 			<script src="dicegame.js"></script>
 		</body>
 	</html>
