Worked through logic erros and made a player class with a contructor to have each player hold their totalDice roll. Logic in startRound now works.

--- a/diceRoyale.html
+++ b/diceRoyale.html
@@ -5,6 +5,7 @@
 		</head>
 		<body>
 			<div id="demoDiv"></div>
+			<div id="playersRemaining"></div>
 			<button onClick="startRound()">Start Next Round!</button>
 			<script src="dicegame.js"></script>
 		</body>
