--- a/diceRoyale.html
+++ b/diceRoyale.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>Battle Royale Dice Game</title>
-		</head>
-		<body>
-			<div id="demoDiv"></div>
-			<div id="playersRemaining"></div>
-			<button onClick="startRound()">Start Next Round!</button>
-			<script src="dicegame.js"></script>
-		</body>
-	</html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Battle Royale Dice Game</title>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="bootstrap.min.css" />
+	</head>
+	<body>
+		<header>
+			<center>
+			<h1>Battle Royale Dice Game</h1>
+			</center>
+		</header>
+		<br>
+		<br>
+		<div id="demoDiv"></div>
+		<div id="playersRemaining"></div>
+		<div id="winningPlayer"></div>
+		<br>
+		<br>
+		<center>
+		<button type button="button" class="btn btn-success" onClick="startRound()">Start Next Round!</button>
+		</center>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="dicegame.js"></script>
+	</body>
+</html>
 
