Setup more styling with a theme. Created a function to display the players remaining after a round.

--- a/diceRoyale.html
+++ b/diceRoyale.html
@@ -15,13 +15,15 @@
 		</header>
 		<br>
 		<br>
-		<div id="demoDiv"></div>
-		<div id="playersRemaining"></div>
-		<div id="winningPlayer"></div>
-		<br>
-		<br>
 		<center>
-		<button type button="button" class="btn btn-success" onClick="startRound()">Start Next Round!</button>
+			<div class="jumbotron">
+				<h3 class="display-3"><div id="roundNumber"></div></h3>
+				<p class="lead"><div id="playersRemaining"></div></p>
+				<p class="lead"><div id="tiebreaker"></div></p>
+				<p class="lead">
+					<button type="button" class="btn btn-success" onClick="startRound()">Start Next Round!</button>
+				</p>
+			</div>
 		</center>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
