--- a/diceRoyale.html
+++ b/diceRoyale.html
@@ -13,6 +13,23 @@
 			<h1>Battle Royale Dice Game</h1>
 			</center>
 		</header>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+			<a class="navbar-brand" href="#">Dice 101</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+		  
+			<div class="collapse navbar-collapse" id="navbarColor01">
+			  <ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+				  <a class="nav-link" href="https://en.wikipedia.org/wiki/Dice"><em>History of Dice</em></a>
+				</li>
+				<li class="nav-item active">
+				  <a class="nav-link" href="https://en.wikipedia.org/wiki/Dice#Standard_variations"><em>Types of Dice</em></a>
+				</li>
+			  </ul>
+			</div>
+		  </nav>
 		<br>
 		<br>
 		<center>
@@ -21,8 +38,9 @@
 					<h3 class="display-3"><div id="roundNumber"></div></h3>
 					<p class="lead"><div id="playersRemaining"></div></p>
 					<p class="lead"><div id="tiebreaker"></div></p>
+					<p class="lead"><div id= "Player"></div></p>
 					<p class="lead">
-					<button type="button" class="btn btn-success" onClick="startRound()">Start Next Round!</button>
+						<button type="button" class="btn btn-success" onClick="startRound()">Start Next Round!</button>
 					</p>
 				</div>
 			</div>
