Finished styling on the html page by adding in rules

--- a/diceRoyale.html
+++ b/diceRoyale.html
@@ -33,12 +33,22 @@
 		<br>
 		<br>
 		<center>
+			<center>
+				<div class="container">
+					<div class="jumbotron">
+						<p><h2> Rules </h2></p>
+						<p class = "lead"><div id = "rules1"></div></p>
+						<p class = "lead"><div id = "rules2"></div></p>
+						<p class = "lead"><div id = "rules3"></div></p>
+					</div>
+				</div>
+			</center>
+			<br>
 			<div class="container">
 				<div class="jumbotron">
 					<h3 class="display-3"><div id="roundNumber"></div></h3>
 					<p class="lead"><div id="playersRemaining"></div></p>
 					<p class="lead"><div id="tiebreaker"></div></p>
-					<p class="lead"><div id= "Player"></div></p>
 					<p class="lead">
 						<button type="button" class="btn btn-success" onClick="startRound()">Start Next Round!</button>
 					</p>
